--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,12 @@
         #fullview>div {
             background-color: azure;
             padding: 200px 0;
+            /* opacity: 0;
+            transition: 0.2s ease-in all; */
+        }
+
+        #fullview>div.active {
+            /* opacity: 1; */
         }
 
         #fullview>div:nth-child(even) {
@@ -24,23 +30,68 @@
             width: 50%;
             text-align: center;
         }
+
+        #navbar {
+            position: fixed;
+            width: 100%;
+            padding: 20px;
+        }
+
+        #navbar ul {
+            list-style: none;
+            text-align: center;
+        }
+
+        #navbar li {
+            display: inline-block;
+            padding: 5px;
+            background-color: #ffffff;
+            border: 1px solid gray;
+            border-radius: 5px;
+        }
+
+        #navbar li a {
+            text-decoration: none;
+            color: black;
+        }
     </style>
 
 </head>
 
 <body>
 
+    <div id="navbar">
+        <ul>
+            <li><a href="#section1">
+                    Section 1
+                </a>
+            </li>
+            <li><a href="#section2">
+                    Section 2
+                </a>
+            </li>
+            <li><a href="#section4">
+                    Section 4
+                </a>
+            </li>
+            <li><a href="#anytag">
+                    Unknown
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <div id="fullview">
-        <div>
+        <div id="section1">
             <h2>Section 1</h2>
         </div>
-        <div>
+        <div id="section2">
             <h2>Section 2</h2>
         </div>
-        <div>
+        <div id="section3">
             <h2>Section 3</h2>
         </div>
-        <div>
+        <div id="section4">
             <h2>Section 4</h2>
         </div>
     </div>
@@ -54,19 +105,22 @@
 
             $("#fullview").fullView({
                 //Navigation
+                navbar: "#navbar",
                 dots: true,
                 dotsPosition: 'right',
 
                 //Scrolling
                 easing: 'swing',
+                // backToTop: true,
+
+                // Accessibility
+                keyboardScrolling: true,
 
                 // Callback
                 onViewChange: function (currentView) {
                     // console.log(currentView)
                 }
             })
-
-            // console.log($("#fullview").fullView());
 
         });
 
