Add menu active class

--- a/demo/index.html
+++ b/demo/index.html
@@ -111,7 +111,7 @@
 
                 //Scrolling
                 easing: 'swing',
-                // backToTop: true,
+                backToTop: true,
 
                 // Accessibility
                 keyboardScrolling: true,
