--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,10 @@
             text-decoration: none;
             color: black;
         }
+
+        #navbar li a.active {
+            font-weight: 600;
+        }
     </style>
 
 </head>
@@ -85,7 +89,7 @@
         <div id="section1">
             <h2>Section 1</h2>
         </div>
-        <div id="section2">
+        <div id="section2" class="active">
             <h2>Section 2</h2>
         </div>
         <div id="section3">
