initial Active class working

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,12 +12,6 @@
         #fullview>div {
             background-color: azure;
             padding: 200px 0;
-            /* opacity: 0;
-            transition: 0.2s ease-in all; */
-        }
-
-        #fullview>div.active {
-            /* opacity: 1; */
         }
 
         #fullview>div:nth-child(even) {
@@ -89,7 +83,7 @@
         <div id="section1">
             <h2>Section 1</h2>
         </div>
-        <div id="section2" class="active">
+        <div id="section2">
             <h2>Section 2</h2>
         </div>
         <div id="section3">
