--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Full View | Demo</title>
-    <link rel="stylesheet" href="../src/fullview.css">
+    <link rel="stylesheet" href="../dist/fullview.min.css">
 
     <style>
         #fullview>div {
@@ -83,7 +83,7 @@
         <div id="section1">
             <h2>Section 1</h2>
         </div>
-        <div id="section2">
+        <div id="section2" class="active">
             <h2>Section 2</h2>
         </div>
         <div id="section3">
@@ -95,7 +95,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script src="../src/fullview.js"></script>
+    <script src="../dist/fullview.min.js"></script>
 
     <script>
 
