Tooltips Added to Side Navigations

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
         content="Create Amazing full-screen full page Scrolling websites fast and easy - A simple and easy to use library." />
 
     <!-- FullView Plugin StyleSheet -->
-    <link rel="stylesheet" href="../dist/fullview.min.css">
+    <link type="text/css" rel="stylesheet" href="../dist/fullview.min.css">
 
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="./theme.css">
@@ -145,7 +145,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 
     <!-- FullView Plugin -->
-    <script src="../dist/fullview.min.js"></script>
+    <script type="text/javascript" src="../dist/fullview.min.js"></script>
     <script>
         $(document).ready(function () {
 
