Add Documentations about new features

--- a/demo/index.html
+++ b/demo/index.html
@@ -155,7 +155,7 @@
                 backToTop: true,
 
                 // Callback
-                onViewChange: function (currentView) {
+                onScrollEnd: function (currentView) {
                     if (!currentView.hasClass('nav-transparent')) {
                         $('.header').addClass('changed');
                     } else {
