--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
     <link type="text/css" rel="stylesheet" href="../dist/fullview.min.css">
 
     <!-- Custom StyleSheet -->
-    <link rel="stylesheet" href="./theme.css">
+    <link rel="stylesheet" href="./css/theme.css">
 
     <!--[if lt IE 9]>
         <script src="./js/respond.js"></script>
@@ -142,7 +142,7 @@
 
 
     <!-- JQuery Library -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
 
     <!-- FullView Plugin -->
     <script type="text/javascript" src="../dist/fullview.min.js"></script>
